force-app/main/default/objects/JBCXM__ScoringSchemeDefinition__c/JBCXM__ScoringSchemeDefinition__c.object-meta.xml
<CustomObject>
    <label>Scorecard Scoring Scheme Definition</label>
    <nameField>
        <label>Scoring Scheme Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scorecard Scoring Scheme Definition</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>