force-app/main/default/objects/JBCXM__ScoringSchemeDefinition__c/fields/JBCXM__Color__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Color__c</fullName>
    <label>Color</label>
    <length>20</length>
    <type>Text</type>
</CustomField>