force-app/main/default/objects/JBCXM__ScoringSchemeDefinition__c/fields/JBCXM__Display__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Display__c</fullName>
    <label>Display</label>
    <length>80</length>
    <type>Text</type>
</CustomField>