force-app/main/default/objects/JBCXM__ScoringSchemeDefinition__c/fields/JBCXM__Grade__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Grade__c</fullName>
    <label>Grade</label>
    <length>80</length>
    <type>Text</type>
</CustomField>