force-app/main/default/objects/JBCXM__ScoringSchemeDefinition__c/fields/JBCXM__SchemeId__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__SchemeId__c</fullName>
    <label>Scheme Id</label>
    <referenceTo>JBCXM__ScoringScheme__c</referenceTo>
    <relationshipLabel>Scorecard Scoring Scheme Definition</relationshipLabel>
    <relationshipName>SCScoringSchemeDefn</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>