force-app/main/default/objects/JBCXM__ScoringSchemeDefinition__c/fields/JBCXM__To__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__To__c</fullName>
    <label>To</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>